--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,38 +1,19 @@
-{{ define "head" }}
-  {{- partial "post-head.html" . -}}
+{{ define "amp-scripts" }}
+<script async custom-element="amp-instagram" src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"></script>
+<script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
+<script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 {{ end }}
+
+{{ define "custom-style" }}
+{{ (resources.Get "css/main.css" | minify ).Content | safeCSS }}
+{{ (resources.Get "css/post.css" | minify ).Content | safeCSS }}
+{{ end }}
+
 
 {{ define "main" }}
 
-<!-- Start Fullpage Hero -->
-<!-- <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-  <amp-img width="404" height="720" alt="The Year&#39;s Best Animal Photos" layout="responsive"
-    src="../img/article/elephants_narrow.png" media="(max-width: 415px)"></amp-img>
-  <amp-img height="720" alt="The Year&#39;s Best Animal Photos" layout="fixed-height"
-    src="../img/article/elephants_wide.jpg" media="(min-width: 416px)"></amp-img>
-  <figcaption class="absolute top-0 right-0 bottom-0 left-0">
-    <header class="p3">
-      <h1 class="ampstart-fullpage-hero-heading mb3">
-        <span class="ampstart-fullpage-hero-heading-text">
-          {{ .Title }}
-        </span>
-      </h1>
-
-      <span class="ampstart-image-credit h4">
-        By <a href="#" role="author" class="text-decoration-none">J.T. Lee</a>,<br> January 18th, 2017
-      </span>
-    </header>
-    <footer class="absolute left-0 right-0 bottom-0">
-      <a class="ampstart-readmore py3 caps line-height-2 text-decoration-none center block h5" href="#content"><span
-          class="ampstart-readmore-text px1">Read more</span></a>
-    </footer>
-  </figcaption>
-</figure> -->
-<!-- End Fullpage Hero -->
-
-
 <main id="content" role="main" class="">
-  <article class="photo-article">
+  <article class="text-content">
     {{ replaceRE "\\[ (.*) \\]" "&bsol;[ $1 &bsol;]" .Content | safeHTML }}
   </article>
 </main>
