--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -47,7 +47,7 @@
     </ul>
   </nav>
   <small>
-    © Your Company, 2016
+    © {{ .Site.Author.name }}, {{ .Site.LastChange.Format "2006" }}
   </small>
 </footer>
 <!-- End Footer -->
