--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,11 @@
+{{ define "title" }}
+  {{ if .Title }}
+    {{ .Title }}
+  {{ else }}
+    {{ .Site.Title }}
+  {{ end }}
+{{ end }}
+
 {{ define "amp-scripts" }}
 <script async custom-element="amp-instagram" src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"></script>
 <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
