--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,5 @@
+{{ define "title" }}{{ .Site.Title }}{{ end }}
+
 {{ define "amp-scripts" }}
 <script async custom-element="amp-live-list" src="https://cdn.ampproject.org/v0/amp-live-list-0.1.js"></script>
 {{ end }}
