--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html amp lang="en">
+<html amp lang="{{- block `language` . }}{{- end }}">
 
 <head>
     <meta charset="utf-8" />
