add go back to home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,10 @@
    margin: 0
  }
 
+ #home a {
+   text-decoration: none;
+ }
+
  article, aside, footer, header, nav, section {
    display: block
  }
