--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -125,3 +125,18 @@
   article blockquote {
     overflow-wrap: break-word;
   }
+
+  .container article img {
+    max-width: -webkit-fill-available;
+  }
+
+   /* https://amp.dev/documentation/components/amp-img/#maintaining-the-aspect-ratio-for-images-with-unknown-dimensions */
+  .fixed-height-container {
+    position: relative;
+    width: 100%;
+    height: 27rem;
+  }
+
+  amp-img.contain img {
+    object-fit: contain;
+  }
