--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,6 +11,7 @@
 {{ end }}
 
 {{ define "amp-scripts" }}
+<script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
 <script async custom-element="amp-instagram" src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"></script>
 <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
@@ -24,7 +25,7 @@
 
 {{ define "main" }}
 
-<main id="content" role="main" class="">
+<main role="main" class="container">
   <article class="text-content">
     {{ replaceRE "\\[ (.*) \\]" "&bsol;[ $1 &bsol;]" .Content | safeHTML }}
   </article>
