--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -122,7 +122,7 @@
     overflow-x: auto
   }
 
-  article blockquote,article p {
+  article blockquote, article p {
     overflow-wrap: break-word;
   }
 
@@ -130,7 +130,8 @@
     max-width: -webkit-fill-available;
   }
 
-   /* https://amp.dev/documentation/components/amp-img/#maintaining-the-aspect-ratio-for-images-with-unknown-dimensions */
+  /* https://amp.dev/documentation/components/amp-img/#maintaining-the-aspect-ratio-for-images-with-unknown-dimensions */
+
   .fixed-height-container {
     position: relative;
     width: 100%;
@@ -139,4 +140,53 @@
 
   amp-img.contain img {
     object-fit: contain;
+  }
+
+  /* .scrollToTop */
+  :root {
+    --color-primary: #005AF0;
+    --color-secondary: #00DCC0;
+    --color-text-light: #fff;
+    --space-2: 1rem;
+    /* 16px */
+    --box-shadow-1: 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 1px -1px rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+  }
+
+  .scrollToTop {
+    color: var(--color-text-light);
+    font-size: 1.4em;
+    box-shadow: var(--box-shadow-1);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    background: var(--color-primary);
+    z-index: 9999;
+    bottom: var(--space-2);
+    right: var(--space-2);
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .spacer {
+    width: 100vw;
+    max-width: 700px;
+    height: 200vh;
+    background-color: var(--color-secondary);
+  }
+
+  /* we move the anchor down to componsate the fixed header */
+  .target {
+    position: relative;
+  }
+
+  .target-anchor {
+    position: absolute;
+    top: -72px;
+    left: 0;
+  }
+
+  .toc {
   }
