--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,11 +3,11 @@
 {{- end }}
 
 {{ define "title" }}
-  {{ if .Title }}
-    {{ .Title }}
-  {{ else }}
-    {{ .Site.Title }}
-  {{ end }}
+{{ if .Title }}
+{{ .Title }}
+{{ else }}
+{{ .Site.Title }}
+{{ end }}
 {{ end }}
 
 {{ define "amp-scripts" }}
@@ -15,6 +15,9 @@
 <script async custom-element="amp-instagram" src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"></script>
 <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
+<script async custom-element="amp-position-observer"
+  src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
+<script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
 {{ end }}
 
 {{ define "custom-style" }}
@@ -26,9 +29,29 @@
 {{ define "main" }}
 
 <main role="main" class="container">
+  <!-- scrollToTop anchor -->
+  <div class="target">
+    <a class="target-anchor" id="top"></a>
+    <amp-position-observer on="enter:hideAnim.start; exit:showAnim.start" layout="nodisplay">
+    </amp-position-observer>
+  </div>
+
+  {{ if or (gt .WordCount 200) .Params.toc }}
+  <section class="toc">
+    <h2>Table Of Contents</h2>
+    {{ .TableOfContents }}
+  </section>
+  {{ end }}
+
+  <div>
+    <!-- Categories -->
+    <!-- Tags -->
+  </div>
+
   <article class="text-content">
     {{ replaceRE "\\[ (.*) \\]" "&bsol;[ $1 &bsol;]" .Content | safeHTML }}
   </article>
-</main>
 
+  {{- partial "scrollToTop.html" . -}}
+</main>
 {{ end }}
