add google analytics

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,6 +30,7 @@
         {{- block "main" . }}{{- end }}
     </div>
     {{- partial "footer.html" . -}}
+    {{if .Site.GoogleAnalytics }}{{- partial "google-analytics.html" . -}}{{ end }}
 </body>
 
 </html>
