--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,6 +11,7 @@
 {{ end }}
 
 {{ define "amp-scripts" }}
+<!-- amp script start -->
 <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
 <script async custom-element="amp-instagram" src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"></script>
 <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
@@ -18,7 +19,9 @@
 <script async custom-element="amp-position-observer"
   src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
 <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
+<!-- amp script end  -->
 {{ end }}
+
 
 {{ define "custom-style" }}
 {{ (resources.Get "css/main.css" | minify ).Content | safeCSS }}
@@ -52,6 +55,6 @@
     {{ replaceRE "\\[ (.*) \\]" "&bsol;[ $1 &bsol;]" .Content | safeHTML }}
   </article>
 
-  {{- partial "scrollToTop.html" . -}}
+  {{- partial "scroll-to-top.html" . -}}
 </main>
 {{ end }}
