add Google AdSense

--- a/layouts/partials/head/common-scripts.html
+++ b/layouts/partials/head/common-scripts.html
@@ -3,3 +3,6 @@
 {{ if .Site.GoogleAnalytics }}
 <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 {{ end }}
+{{ if .Site.Params.GoogleAdSense }}
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+{{ end }}
