--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,11 +25,18 @@
 </head>
 
 <body>
+    {{ if .Site.Params.GoogleAdSense }}
+    <amp-auto-ads type="adsense" data-ad-client="{{ .Site.Params.GoogleAdSense }}"></amp-auto-ads>
+    {{ end }}
+
     {{- partial "header.html" . -}}
+
     <div id="content">
         {{- block "main" . }}{{- end }}
     </div>
+
     {{- partial "footer.html" . -}}
+
     {{if .Site.GoogleAnalytics }}{{- partial "google-analytics.html" . -}}{{ end }}
 </body>
 
