--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,8 +16,8 @@
   </div>
 
   <ul class="ampstart-sidebar-faq list-reset m0">
-    <li class="ampstart-faq-item"><a href="#" class="text-decoration-none">About</a></li>
-    <li class="ampstart-faq-item"><a href="#" class="text-decoration-none">Contact</a></li>
+    <li class="ampstart-faq-item"><a href="{{ .Site.BaseURL }}about/" class="text-decoration-none">About</a></li>
+    <li class="ampstart-faq-item"><a href="mailto:{{- .Site.Author.email -}}" class="text-decoration-none">Contact</a></li>
   </ul>
 </amp-sidebar>
 <!-- End Sidebar -->
