--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -131,11 +131,10 @@
   }
 
   /* https://amp.dev/documentation/components/amp-img/#maintaining-the-aspect-ratio-for-images-with-unknown-dimensions */
-
   .fixed-height-container {
     position: relative;
     width: 100%;
-    height: 27rem;
+    height: 300px;
   }
 
   amp-img.contain img {
@@ -143,7 +142,6 @@
   }
 
   /* .scrollToTop */
-
   :root {
     --color-primary: #005AF0;
     --color-secondary: #00DCC0;
