--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,6 +19,8 @@
     <li class="ampstart-faq-item"><a href="{{ .Site.BaseURL }}about/" class="text-decoration-none">About</a></li>
     <li class="ampstart-faq-item"><a href="mailto:{{- .Site.Author.email -}}" class="text-decoration-none">Contact</a></li>
   </ul>
+
+  {{ partial "sidebar.html" . }}
 </amp-sidebar>
 <!-- End Sidebar -->
 <!-- End Navbar -->
