--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,8 +2,8 @@
   <div id="all-categories">
     <h3>Categories</h3>
     <ul>
-      {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-      <li><a href="/tags/{{ $name | urlize }}">{{ $name }}</a></li>
+      {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
+      <li><a href="/categories/{{ $name | urlize }}">{{ $name }}</a></li>
       {{ end }}
     </ul>
 
