--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>{{- block "title" . }}{{- end }}</title>
-    <link rel="canonical" href="{{ .Permalink }}" />
+    <link rel="canonical" href="{{ .Permalink }}index.html" />
     <meta name="viewport" content="width=device-width" />
     {{ if .Site.GoogleAnalytics }}<meta name="amp-google-client-id-api" content="googleanalytics" />{{ end }}
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
@@ -22,7 +22,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     {{ partial "head/common-scripts.html" . }}
     {{ block "amp-scripts" . }}{{ end }}
-
+    {{ partial "head/schema.html" . }}
 </head>
 
 <body>
