--- a/layouts/partials/google-analytics.html
+++ b/layouts/partials/google-analytics.html
@@ -2,9 +2,9 @@
   <script type="application/json">
 {
   "vars" : {
-    "gtag_id": "{{ .Site.GoogleAnalytics }}",
+    "gtag_id": "{{ .Site.Config.Services.GoogleAnalytics.ID }}",
     "config" : {
-      "{{ .Site.GoogleAnalytics }}": { "groups": "default" }
+      "{{ .Site.Config.Services.GoogleAnalytics.ID }}": { "groups": "default" }
     }
   }
 }
