--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
 
   <ul class="ampstart-sidebar-faq list-reset m0">
     <li class="ampstart-faq-item"><a href="{{ .Site.BaseURL }}about/" class="text-decoration-none">About</a></li>
-    <li class="ampstart-faq-item"><a href="mailto:{{- .Site.Author.email -}}" class="text-decoration-none">Contact</a></li>
+    <li class="ampstart-faq-item"><a href="mailto:{{- .Site.Params.Author.email -}}" class="text-decoration-none">Contact</a></li>
   </ul>
 
   {{ partial "sidebar.html" . }}
